# for-project

./: .gitignore  main.py  pyproject.toml  readme.md  try_this.py
DTLCS/: machine_learning.ipynb
DTLCS/csv_file/: ccssvv.csv
ai_traffic_system/: trafic_light.py  vehicle.py
